# golden-dataset-studio

./: README.md  hr-policy-eval_v1.1.json  hr-policy-eval_v1.3.json  my_answers.json  pyproject.toml  rag_eval_pipeline.drawio  requirements.txt  run_golden_eval.py  test_langfuse_connection.py
.golden_dataset/: manifest.json  working.jsonl
.golden_dataset/evals/: eval_1.1_20260615T184616.json  eval_1.1_20260615T184648.json  eval_1.1_20260615T184713.json  eval_1.2_20260615T184918.json  eval_1.3_20260615T184942.json  eval_1.3_20260615T185002.json  eval_1.3_20260615T195806.json  eval_1.3_20260615T200556.json  eval_1.3_20260615T201000.json  eval_1.3_20260615T205319.json  eval_1.3_20260615T205446.json  eval_1.3_20260615T205612.json  eval_1.3_20260615T205830.json  eval_1.3_20260615T205937.json  eval_1.3_20260615T210220.json  eval_1.3_20260615T210650.json  eval_1.3_20260615T210745.json  eval_1.3_20260615T211000.json  eval_1.3_20260615T212247.json  eval_1.3_20260615T212643.json  eval_1.3_20260615T213625.json  eval_1.3_20260615T214324.json  eval_1.3_20260615T214829.json  eval_1.3_20260615T223854.json  eval_1.3_20260615T224218.json
.golden_dataset/versions/: 1.0.jsonl  1.1.jsonl
data/: company_policy.txt
evaluation/: deepeval_eval.py
golden_dataset/: __init__.py  cli.py  evaluator.py  exporter.py  importer.py  models.py  store.py
misc/: app2.py
rag_eval_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
user/: app.py  app_user.py
user/.deepeval/: .deepeval_telemetry.txt
user2/: app.py
user3/: app.py  poc.py
user4/: app.py
(+5 files in other folders)
