[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
eval = ["sentence-transformers>=2.2.0"]
ragas = ["ragas>=0.1", "datasets>=2.14"]

[project.scripts]
golden = "golden_dataset.cli:main"

[tool.setuptools.packages.find]
include = ["golden_dataset*"]
